ingress_examples/default_backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend
  annotations: {
    "fortiadc-ip" : "10.0.100.133",
    "fortiadc-login" : "fad-login",
    "fortiadc-ctrl-log" : "enable",
    "fortiadc-vdom" : "root",
    "virtual-server-ip" : "172.23.133.125",
    "virtual-server-interface" : "port1",
    "virtual-server-port" : "443",
    "virtual-server-addr-type" : "ipv4",
    "virtual-server-waf-profile" : "High-Level-Security",
    "virtual-server-av-profile" : "Antivirus-Profile",
    "virtual-server-dos-profile" : "",
    "virtual-server-captcha-profile" : "LB_CAPTCHA_PROFILE_DEFAULT",
    "virtual-server-nat-src-pool" : "",
    "virtual-server-traffic-group" : "default",
    "virtual-server-fortiview" : "enable",
    "virtual-server-traffic-log" : "enable",
    "virtual-server-wccp" : "enable",
    "load-balance-method" : "LB_METHOD_LEAST_CONNECTION",
    "load-balance-profile" : "LB_PROF_HTTPS"
  }
spec:
  ingressClassName: fadc-ingress-controller
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 80
