ingress_examples/name-virtual-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  annotations: {
    "application-security-ip" : "10.0.100.133",
    "application-security-login" : "fad-login",
    "application-security-vdom" : "root",
    "virtual-server-ip" : "2001:db8::68",
    "virtual-server-interface" : "port1",
    "virtual-server-addr-type" : "ipv6"
    
  }
spec:
  ingressClassName: fadc-ingress-controller
  rules:
  - host: foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service3
            port:
              number: 1245
  - host: bar.foo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service2
            port:
              number: 1242
